--- a/client/src/components/AddedComponents/HomeHeader.css
+++ b/client/src/components/AddedComponents/HomeHeader.css
@@ -56,13 +56,12 @@
   position: absolute;
   bottom: 0;
   left: 0;
-  max-width: 80%; 
+  width: 80%; /* Définir une largeur fixe */
   padding: 10px;
   background-color: rgba(255, 255, 255, 0.7); 
-  border-radius: 0 10px 0 0;
+  border-top-right-radius: 50px;
   z-index: 10; 
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  width: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -88,9 +87,9 @@
     font-size: 1.25rem;
   }
   .slogan-container {
-    width: 70%;
+    max-width: 90%;
     height: 13%;
-margin-bottom: 0%;  }
+margin-bottom: 0;  }
 }
 
 @media (min-width: 321px) and (max-width: 376px) {
